cmake_minimum_required(VERSION 3.8)
project(data_visual)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)

# signal_generator node
add_executable(SignalPublisher src/pub_node.cpp)
ament_target_dependencies(SignalPublisher rclcpp std_msgs)

# signal_processor node
add_executable(SignalProcessor src/sub_node.cpp)
ament_target_dependencies(SignalProcessor rclcpp std_msgs)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

install(TARGETS
  SignalPublisher
  SignalProcessor
  DESTINATION lib/${PROJECT_NAME})


ament_package()
